k8s/monitoring/grafana-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  labels:
    app: dummy-blockchain
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: dummy-blockchain
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: http-grafana
  selector:
    app: dummy-blockchain
    component: grafana
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dummy-blockchain
    component: grafana
  name: grafana
spec:
  selector:
    matchLabels:
      app: dummy-blockchain
      component: grafana
  template:
    metadata:
      labels:
        app: dummy-blockchain
        component: grafana
    spec:
      securityContext:
        fsGroup: 472
        supplementalGroups:
        - 0    
      containers:
        - name: grafana
          image: grafana/grafana:7.5.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http-grafana
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1            
          resources:
            requests:
              cpu: 250m
              memory: 750Mi
          volumeMounts:
            - name: grafana-pv
              mountPath: /var/lib/grafana
            - name: grafana-config-volume
              mountPath: /etc/grafana/
      volumes:
        - name: grafana-pv
          persistentVolumeClaim:
            claimName: grafana-pvc
        - name: grafana-config-volume
          configMap:
            name: grafana-config
            items:
            - key: grafana.ini
              path: grafana.ini
            - key: datasources.yml
              path: provisioning/datasources/datasources.yml
            - key: dashboards.yml
              path: provisioning/dashboards/dashboards.yml
            - key: dashboard.json
              path: dashboard.json
